tests/fixtures/invalid/pow_bool_int_list.py
# Cannot call pow() with Bool, Int, List[int]
x = pow(True, 1, [1, 2, 3])
